:memo: fix linguist

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-* linguist-documentation=false
-* linguist-vendored
+*.md liguist-detectable
+README.md -linguist-documentation
+# * linguist-documentation=false
+# * linguist-vendored
+practice/*/*.py linguist-vendored=false
+example/*/*.py linguist-vendored=false
