--- a/.pylintrc
+++ b/.pylintrc
@@ -11,6 +11,7 @@ fail-under=10
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
 ignore=CVS
+       pyx
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
