--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip3 install -U pylint
+      - run: pip3 install -U cython
       - run: echo "Linting examples"
       - run: pylint --rcfile=.pylintrc examples/
       - run: echo "Linting practice"
